--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
             <artifactId>guava</artifactId>
             <version>33.1.0-jre</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
